fixed irregular transition when collapsing sidebar

--- a/dash-frontend/src/app/dashboard/page.module.css
+++ b/dash-frontend/src/app/dashboard/page.module.css
@@ -11,8 +11,7 @@
     flex-direction: column;
     align-items: center;
     margin-left: 250px;
-    margin-top: 4rem; /* navbar height */
-    transition: margin-left 0.3s ease;
+    margin-top: var(--navbar-height); /* navbar height */
 }
 
 .title {
